Name:               smtlib
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           SMT-LIB V2 Compiler Kit
Description:        Tools to parse, analyze and pretty-print SMT-LIB V2 programs
Build-Type:         Simple


Executable smtlib
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , uulib
                    , cmdargs
    Hs-Source-Dirs:   src/
    Extensions: 	  FlexibleContexts, DoAndIfThenElse
                                                                      