Name:               smtlib
Version:            1.0
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           SMT-LIB V2 Compiler Kit
Description:        Tools to parse, analyze and pretty-print SMT-LIB V2 programs
Build-Type:         Simple


Executable smtlib
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , uulib
                    , cmdargs
    Hs-Source-Dirs:   src/
    Extensions: 	  FlexibleContexts, DoAndIfThenElse

library
  build-depends:
    base >= 4 && < 5,
    containers >= 0.2,
    filepath,
    uu-parsinglib >= 2.7.1,
    uulib,
    cmdargs

  ghc-options: -Wall

  if os(darwin)
    ld-options: -w
    frameworks: vecLib
    cpp-options: -D__MACOS__

  hs-source-dirs: src/

  exposed-modules:
      Language.SMTLib2
      Language.SMTLib2.Base
      Language.SMTLib2.Parser
      Language.SMTLib2.Printer
      Language.SMTLib2.Builder

  other-modules:
      Language.SMTLib2.Parser.CharSet
      Language.SMTLib2.Parser.Core
      Language.SMTLib2.Parser.Token
